--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/material-top-tabs": "^5.0.5",
-    "expo": "~36.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-tab-view": "^2.13.0",
-    "react-native-web": "~0.11.7",
-    "react-navigation-stack": "^2.1.1",
-    "react-navigation-tabs": "^2.7.0"
+    "@expo/vector-icons": "^10.0.6",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/bottom-tabs": "^5.0.5",
+    "@react-navigation/native": "^5.0.5",
+    "@react-navigation/stack": "^5.0.5",
+    "expo": "^35.0.0",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-navigation": "^4.8.4",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.0.0-beta.4",
+    "react-native-web": "^0.11.7"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.0.0"
+    "@babel/core": "^7.0.0",
+    "babel-preset-expo": "^7.0.0"
   },
   "private": true
 }
