--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.6.0",
     "react-native-navigation": "^4.8.4",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
